# rust-mcp-filesystem

./: .release-config.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  debug.yml  docker.yml  mcp-discovery.yml  publish.yml  release-pr.yml  release.yml
docs/: README.md  _coverpage.md  capabilities.md  index.html  quickstart.md
docs/_configs/: claude-desktop.md
docs/guide/: cli-command-options.md  install.md
src/: cli.rs  error.rs  fs_service.rs  handler.rs  lib.rs  macros.rs  main.rs  server.rs  tools.rs
src/fs_service/: archive.rs  core.rs  io.rs  search.rs  utils.rs
src/fs_service/archive/: unzip.rs  zip.rs
src/fs_service/io/: edit.rs  read.rs  write.rs
src/fs_service/search/: content.rs  files.rs  tree.rs
src/tools/: calculate_directory_size.rs  create_directory.rs  diff_files.rs  directory_tree.rs  edit_file.rs  find_duplicate_files.rs  find_empty_directories.rs  get_file_info.rs  head_file.rs  list_allowed_directories.rs  list_directory.rs  list_directory_with_sizes.rs  move_file.rs  read_file_lines.rs  read_files.rs  read_media_file.rs  read_multiple_files.rs  read_multiple_media_files.rs  read_multiple_text_files.rs  read_text_file.rs  search_file.rs  search_files_content.rs  tail_file.rs  write_file.rs  zip_unzip.rs
tests/: test_cli.rs  test_edit_regex.rs  test_fs_service.rs  test_tools.rs
tests/common/: common.rs
